--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "shopify-node-api": "^1.8.0",
-    "moment": "^2.22.0"
+    "moment": "^2.22.0",
+    "promise": "^8.0.1"
   },
   "engines": {
     "node": "9.x"
