--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "request-promise": "^4.2.2",
     "shopify-node-api": "^1.8.0",
     "moment": "^2.22.0",
-    "promise": "^8.0.1"
+    "promise": "^8.0.1",
+    "math-ceil": "^1.0.0"
   },
   "engines": {
     "node": "9.x"
