--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "moment": "^2.22.0",
     "promise": "^8.0.1",
     "math-ceil": "^1.0.0",
-    "array-compare": "^2.0.0"
+    "array-compare": "^2.0.0",
+    "sleep": "^5.1.1"
   },
   "engines": {
     "node": "9.x"
