💵🎋 Checkpoint ./server.js:820276/630 ./package.json:820276/1627

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "shopify-node-api": "^1.8.0",
-    "moment": "^2.22.0",
     "promise": "^8.0.1",
     "math-ceil": "^1.0.0",
     "array-compare": "^2.0.0",
-    "sleep": "^5.1.1"
+    "sleep": "^5.1.1",
+    "moment-timezone": "^0.5.14"
   },
   "engines": {
     "node": "9.x"
